# ai-commander

./: .editorconfig  .gitignore  AGENTS.md  AICommander.sln  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Directory.Build.props  Directory.Packages.props  Main_started.txt  README.md  RELEASE_NOTES.md  cliff.toml  commit-message-config.json  commitlint.config.js  commitlint.config.ts  index.html  knip.config.ts  lefthook.yml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agent/workflows/: commit.md
.agents/: AGENTS.md
.config/: dotnet-tools.json
.cursor/rules/: dotnet-quality.mdc  tdd.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.husky/: task-runner.json
config/: ai-commander.yaml
docs/: architecture.md  providers.md  testing.md
scripts/: cargo.ts  native-process.ts  sync-version.ts  tauri.ts
src/: hotkeys.test.ts  hotkeys.ts  main.ts  styles.css  templates.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automation.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  runtime.rs  shortcuts.rs
src/AICommander.App/: AICommander.App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/AICommander.Core/: AICommander.Core.csproj  Class1.cs
src/AICommander.Tests/: AICommander.Tests.csproj  ActionDispatcherTests.cs  ConfigLoaderTests.cs  KeyParserTests.cs  UnitTest1.cs  (+1 more)
(+31 files in other folders)
