[package]
name = "ai-commander"
version = "0.1.0"
description = "Cross-platform global hotkey router for AI coding agents"
authors = ["pablousx"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pablousx/ai-commander"
rust-version = "1.85"

[lib]
name = "ai_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
enigo = "0.6"
indexmap = { version = "2.12", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.39"
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-log = "2.8"
tauri-plugin-notification = "2.3"
tauri-plugin-single-instance = "2.4"
thiserror = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
